Update Swiss quality control text in home.json de
Update Swiss quality control text in home.json de

--- a/public/locales/de/home.json
+++ b/public/locales/de/home.json
@@ -30,8 +30,8 @@
     },
     "capabilities": {
       "swissQuality": {
-        "title": "Schweizer Qualitätskontrolle",
-        "description": "Unsere Prozesse orientieren sich an strengen Schweizer Qualitätsstandards. Damit gewährleisten wir eine Datenaufbereitung, die höchsten Ansprüchen genügt und Ihnen erlaubt, sich auf Ihr Kerngeschäft zu konzentrieren."
+        "title": "Datensicherheit nach Schweizer Standards",
+        "description": "Wir legen höchsten Wert auf den sorgfältigen Umgang mit Daten. Ihre Daten werden dort gespeichert, wo Sie es bevorzugen – bei Bedarf ausschliesslich in der Schweiz, gemäss strengsten Datenschutz- und Qualitätsstandards."
       }
     },
     "academy": {
