--- a/public/locales/fr/about.json
+++ b/public/locales/fr/about.json
@@ -28,12 +28,12 @@
         },
         "impact": {
             "title": "UNE ENTREPRISE CONSTRUITE SUR L'IMPACT",
-            "text": "Label Ladder est basé sur l'autonomisation, où <strong>1 000 Namibiens</strong> sont formés aux compétences numériques, soutenant le <strong>développement économique</strong> et l'<strong>emploi des jeunes</strong>"
+            "text": "Label Ladder est basé sur l'autonomisation, où <strong>500 Namibiens</strong> sont formés aux compétences numériques, soutenant le <strong>développement économique</strong> et l'<strong>emploi des jeunes</strong>"
         }
     },
     "ourImpact": {
         "title": "Notre impact",
-        "subtitle": "Nous avons pour mission de former 1 000 Namibiens d'ici 2027, en leur fournissant les outils et les connaissances nécessaires pour travailler dans les industries des données et de l'IA.",
+        "subtitle": "Nous avons pour mission de former 500 Namibiens d'ici 2027, en leur fournissant les outils et les connaissances nécessaires pour travailler dans les industries des données et de l'IA.",
         "paragraph1": "Notre projet est soutenu par le <strong>Ministère namibien de l'Éducation, de l'Innovation, de la Jeunesse, des Sports, des Arts et de la Culture</strong>.",
         "paragraph2": "Grâce à notre programme <strong>Académie Label Ladder</strong>, nous garantissons à nos employés un parcours vers la croissance et l'employabilité dans une <strong>industrie mondialement compétitive</strong>.",
         "coreTeachings": "Enseignements fondamentaux de l'Académie :",
