--- a/public/locales/fr/general-services.json
+++ b/public/locales/fr/general-services.json
@@ -1,7 +1,7 @@
 {
     "hero": {
         "title": "Services d'annotation de données générales",
-        "subtitle": "Annotation de données à l'échelle de l'entreprise alimentée par notre équipe de 1 000 personnes en Namibie. Annotation rentable et de haute qualité pour tous les types de données."
+        "subtitle": "Annotation de données à l'échelle de l'entreprise alimentée par notre équipe de 500 personnes en Namibie. Annotation rentable et de haute qualité pour tous les types de données."
     },
     "overview": {
         "title": "Services d'annotation et de traitement de données",
